syntax = "proto3";

package gateway.api;
option go_package = "github.com/kirvader/BodyController/services/gateway/proto";

import "services/nutrition/proto/models.proto";

service Nutrition {
	rpc CreateIngredient(CreateIngredientRequest) returns (CreateIngredientResponse);
	rpc DeleteIngredient(DeleteIngredientRequest) returns (DeleteIngredientResponse);
	rpc ListIngredients(ListIngredientRequest) returns (ListIngredientsResponse);

	rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse);
	rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse);
	rpc ListRecipes(ListRecipeRequest) returns (ListRecipesResponse);

	rpc CreateMeal(CreateMealRequest) returns (CreateMealResponse);
	rpc DeleteMeal(DeleteMealRequest) returns (DeleteMealResponse);
	rpc ListMeals(ListMealRequest) returns (ListMealsResponse);
}

message CreateIngredientRequest {
	nutrition.models.Ingredient entity = 1;
};

message CreateIngredientResponse {
	string entity_id = 1;
};

message DeleteIngredientRequest {
	string entity_id = 1;
};

message DeleteIngredientResponse {};

message ListIngredientRequest {
	int32 page_size = 1;
	string page_token = 2;
};

message ListIngredientsResponse {
	repeated nutrition.models.Ingredient entities = 1;
	string next_page_token = 2;
};

message CreateRecipeRequest {
	nutrition.models.Recipe entity = 1;
};

message CreateRecipeResponse {
	string entity_id = 1;
};

message DeleteRecipeRequest {
	string entity_id = 1;
};

message DeleteRecipeResponse {};

message ListRecipeRequest {
	int32 page_size = 1;
	string page_token = 2;
};

message ListRecipesResponse {
	repeated nutrition.models.Recipe entities = 1;
	string next_page_token = 2;
};

message CreateMealRequest {
	nutrition.models.Meal entity = 1;
};

message CreateMealResponse {
	string entity_id = 1;
};

message DeleteMealRequest {
	string entity_id = 1;
};

message DeleteMealResponse {};

message ListMealRequest {
	int32 page_size = 1;
	string page_token = 2;
};

message ListMealsResponse {
	repeated nutrition.models.Meal entities = 1;
	string next_page_token = 2;
};

